RESOLVED FIXED204929
[WebAssembly] Fix LLIntCallee's ownership
https://bugs.webkit.org/show_bug.cgi?id=204929
Summary [WebAssembly] Fix LLIntCallee's ownership
Tadeu Zagallo
Reported 2019-12-05 16:16:15 PST
...
Attachments
Patch (12.68 KB, patch)
2019-12-05 16:25 PST, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2019-12-05 16:25:12 PST
WebKit Commit Bot
Comment 2 2019-12-05 17:09:04 PST
Comment on attachment 384975 [details] Patch Clearing flags on attachment: 384975 Committed r253188: <https://trac.webkit.org/changeset/253188>
WebKit Commit Bot
Comment 3 2019-12-05 17:09:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-05 17:10:21 PST
Note You need to log in before you can comment on or make changes to this bug.