Source/JavaScriptCore/wasm/WasmBBQPlan.cpp
@@ -133,7 +133,7 @@ void BBQPlan::work(CompilationEffort effort)
         LockHolder holder(m_codeBlock->m_lock);
         m_codeBlock->m_bbqCallees[m_functionIndex] = callee.copyRef();
         {
-            LLIntCallee& llintCallee = m_codeBlock->m_llintCallees[m_functionIndex].get();
+            LLIntCallee& llintCallee = m_codeBlock->m_llintCallees->at(m_functionIndex).get();
             auto locker = holdLock(llintCallee.tierUpCounter().m_lock);
             llintCallee.setReplacement(callee.copyRef());
             llintCallee.tierUpCounter().m_compilationStatus = LLIntTierUpCounter::CompilationStatus::Compiled;
@@ -172,7 +172,7 @@ void BBQPlan::work(CompilationEffort effort)
         for (unsigned i = 0; i < m_codeBlock->m_wasmToWasmCallsites.size(); ++i) {
             repatchCalls(m_codeBlock->m_wasmToWasmCallsites[i]);
             if (m_codeBlock->m_llintCallees) {
-                LLIntCallee& llintCallee = m_codeBlock->m_llintCallees[i].get();
+                LLIntCallee& llintCallee = m_codeBlock->m_llintCallees->at(i).get();
                 if (JITCallee* replacementCallee = llintCallee.replacement())
                     repatchCalls(replacementCallee->wasmToWasmCallsites());
                 if (OMGForOSREntryCallee* osrEntryCallee = llintCallee.osrEntryCallee())
